--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@
     align-items: center;
     justify-content: center;
     margin: 9px;
-    /* display: none; */
-
+}
+.displaynone{
+    display: none;
 }
 
